Again, fix crashes while detaching/closing certain tabs.

BUG: 106464 

svn path=/branches/KDE/3.5/kdebase/konsole/; revision=485306